[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ImportAssets.gd" type="Script" id=1]

[node name="ImportAssets" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This scene imports all of the assets that are in the user's directory, and displays the file paths of the assets as they are being imported.

Once it is done importing, the scene goes to the main menu."
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 266.0
margin_right = 1024.0
margin_bottom = 286.0
text = "Importing assets..."
align = 1

[node name="ImportingLabel" type="Label" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1024.0
margin_bottom = 310.0
align = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 1024.0
margin_bottom = 334.0
max_value = 1.0

[node name="MissingAssetsPopup" type="AcceptDialog" parent="."]
margin_right = 500.0
margin_bottom = 200.0
popup_exclusive = true
window_title = "Missing Asset Folder"
dialog_autowrap = true

[node name="MissingModulePopup" type="AcceptDialog" parent="."]
margin_right = 350.0
margin_bottom = 220.0
window_title = "Missing Module"
dialog_text = "This version of Godot does not include the Tabletop Club module, which is required to import assets from the file system.

You can compile this version of Godot to gain access to missing functionality:
https://github.com/drwhut/godot"
dialog_autowrap = true

[connection signal="popup_hide" from="MissingAssetsPopup" to="." method="_on_MissingAssetsPopup_popup_hide"]
[connection signal="popup_hide" from="MissingModulePopup" to="." method="_on_MissingModulePopup_popup_hide"]
